[package]
name = "nauvi"
version = "0.1.0"
edition = "2021"
description = "Simple javascript codegen (this does not provide validity checks nor does not guarantee pretty output)"
authors = ["Oliwier Michalik"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
